k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-cicd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: hoangf.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-cicd
                port:
                  number: 80
